Add remaining elements to first section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
+        <div class="container">
+        <div class="title">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower conrast</p>
+            <button>Sign up</button>
+        </div>
+        <img src="./pexels-lina-kivaka-2286452.jpg" alt="image">
+        </div>
+
     </div>
 </body>
 </html>
