Add html to section 2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div class="hero">
         <div class="header">
             <h2>Header Logo</h2>
             <ul>
@@ -26,6 +26,25 @@
         <img src="./pexels-lina-kivaka-2286452.jpg" alt="image">
         </div>
 
+    </div>
+    <div class="info-section">
+        <div class="info">Some random information</div>
+        <div>
+            <img src="./pexels-joan-costa-14011484.jpg" alt="">
+            <div>image description</div>
+        </div>
+        <div>
+            <img src="./pexels-büşranur-aydın-14958001.jpg" alt="">
+            <div>image 2 description</div>
+        </div>
+        <div>
+            <img src="./zhang-liven-4ds5gGpgMow-unsplash.jpg" alt="">
+            <div>image 3 description</div>
+        </div>
+        <div>
+            <img src="./freunde-des-snacks-e-v-fWYyxj2TJ70-unsplash.jpg" alt="">
+            <div>image 4 description</div>
+        </div>
     </div>
 </body>
 </html>
