--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </div>
     <div class="info-section">
         <div class="info">Some random information</div>
+        <div class="images">
         <div>
             <img src="./pexels-joan-costa-14011484.jpg" alt="">
             <div>image description</div>
@@ -44,6 +45,13 @@
         <div>
             <img src="./freunde-des-snacks-e-v-fWYyxj2TJ70-unsplash.jpg" alt="">
             <div>image 4 description</div>
+        </div>
+        </div>
+    </div>
+
+    <div class="quote-section">
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people would actually read it. Who knows All i know is that it looks nice
+        <div class="thor">-Thor God of Thunder</div>
         </div>
     </div>
 </body>
