--- a/index.html
+++ b/index.html
@@ -54,5 +54,14 @@
         <div class="thor">-Thor God of Thunder</div>
         </div>
     </div>
+    <div class="signup-section">
+        <div class="button">
+            <div>
+            <div class="action">Call to action! It's time!</div>
+            <div class="product">Sign for our product by clicking that button right over there!</div>
+            </div>
+            <button class="signup">Sign up</button>
+        </div>
+    </div>
 </body>
 </html>
