Add complete html and css to footer

--- a/index.html
+++ b/index.html
@@ -63,5 +63,7 @@
             <button class="signup">Sign up</button>
         </div>
     </div>
+
+    <div class="footer">Copyright &copy The Odin Project 2023</div>
 </body>
 </html>
