--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class="quote-section">
-        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people would actually read it. Who knows? All i know is that it looks nice
+        <div class="quote"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people would actually read it. Who knows? All i know is that it looks nice</em>
         <div class="thor">-Thor God of Thunder</div>
         </div>
     </div>
