Add minor finishes

--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
 
     </div>
     <div class="info-section">
-        <div class="info">Some random information</div>
+        <div class="info">Some random information.</div>
         <div class="images">
         <div>
             <img src="./pexels-joan-costa-14011484.jpg" alt="">
-            <div>image description</div>
+            <div>A beautiful scenery</div>
         </div>
         <div>
             <img src="./pexels-büşranur-aydın-14958001.jpg" alt="">
-            <div>image 2 description</div>
+            <div>cup of coffee</div>
         </div>
         <div>
             <img src="./zhang-liven-4ds5gGpgMow-unsplash.jpg" alt="">
-            <div>image 3 description</div>
+            <div>coffee dessert</div>
         </div>
         <div>
-            <img src="./freunde-des-snacks-e-v-fWYyxj2TJ70-unsplash.jpg" alt="">
-            <div>image 4 description</div>
+            <img src="./sam-moghadam-khamseh-QhlCgRucrbA-unsplash.jpg" alt="">
+            <div>pancake with sliced strawberries and black berries on white ceramic plate</div>
         </div>
         </div>
     </div>
