wrap images in info-section

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
     <div class="info-section">
         <div class="info">Some random information.</div>
         <div class="images">
-        <div>
+        <div class="image-container">
             <img src="./pexels-joan-costa-14011484.jpg" alt="">
             <div>A beautiful scenery</div>
         </div>
-        <div>
+        <div class="image-container">
             <img src="./pexels-büşranur-aydın-14958001.jpg" alt="">
             <div>cup of coffee</div>
         </div>
-        <div>
+        <div class="image-container">
             <img src="./zhang-liven-4ds5gGpgMow-unsplash.jpg" alt="">
             <div>coffee dessert</div>
         </div>
-        <div>
+        <div class="image-container">
             <img src="./sam-moghadam-khamseh-QhlCgRucrbA-unsplash.jpg" alt="">
             <div>pancake with sliced strawberries and black berries on white ceramic plate</div>
         </div>
